Criacao da tela de monitoramento

--- a/src/main/resources/br/com/automacaowebia/dashboard.css
+++ b/src/main/resources/br/com/automacaowebia/dashboard.css
@@ -128,3 +128,13 @@
     -fx-border-color: linear-gradient(to bottom right, #2f466b, #662d60);
     -fx-border-radius: 8px;
 }
+.log-area {
+    -fx-control-inner-background: black; /* fundo preto */
+    -fx-text-fill: white;               /* texto branco */
+    -fx-highlight-fill: #444444;        /* seleção */
+    -fx-highlight-text-fill: white;
+    -fx-font-family: "Consolas", "Courier New", monospace; /* fonte tipo terminal */
+    -fx-font-size: 12px;                /* tamanho da fonte */
+    -fx-border-color: #333333;          /* borda sutil */
+    -fx-border-width: 1px;
+}
