--- a/src/main/resources/br/com/automacaowebia/dashboard.fxml
+++ b/src/main/resources/br/com/automacaowebia/dashboard.fxml
@@ -5,16 +5,22 @@
 <?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -68,6 +74,14 @@
                             <graphic>
                                 <FontAwesomeIconView fill="WHITE" glyphName="BARCODE" size="1.2em" />
                             </graphic>
+                        </Button>
+                        <Button fx:id="monitor_btn" layoutX="40" layoutY="440" onMouseClicked="#activateAnchorPane" prefWidth="200.0" styleClass="navbutton" stylesheets="@dashboard.css" text="Monitor" textFill="WHITE">
+                            <graphic>
+                                <FontAwesomeIconView fill="WHITE" glyphName="SERVER" />
+                            </graphic>
+                     <font>
+                        <Font size="16.0" />
+                     </font>
                         </Button>
                         <Button fx:id="signout_btn" layoutX="39.0" layoutY="614.0" mnemonicParsing="false" onAction="#signOut" prefHeight="38.0" prefWidth="200.0" styleClass="navbutton" stylesheets="@dashboard.css" text="Sair" textFill="WHITE">
                             <font>
@@ -321,14 +335,14 @@
                                         <Font name="Dubai Bold" size="16.0" />
                                     </font>
                                 </Button>
-                        <Button fx:id="btn_test_printer" layoutX="341.0" layoutY="563.0" mnemonicParsing="false" onAction="#testPrinter" prefHeight="42.0" prefWidth="194.0" styleClass="save" text="Testar impressora">
-                           <graphic>
-                              <FontAwesomeIconView fill="WHITE" glyphName="PRINT" size="18.0" />
-                           </graphic>
-                           <font>
-                              <Font name="Dubai Bold" size="16.0" />
-                           </font>
-                        </Button>
+                                <Button fx:id="btn_test_printer" layoutX="341.0" layoutY="563.0" mnemonicParsing="false" onAction="#testPrinter" prefHeight="42.0" prefWidth="194.0" styleClass="save" text="Testar impressora">
+                                    <graphic>
+                                        <FontAwesomeIconView fill="WHITE" glyphName="PRINT" size="18.0" />
+                                    </graphic>
+                                    <font>
+                                        <Font name="Dubai Bold" size="16.0" />
+                                    </font>
+                                </Button>
                             </children>
                         </AnchorPane>
                         <AnchorPane fx:id="impressao_zpl" layoutX="-1.0" layoutY="55.0" prefHeight="639.0" prefWidth="820.0" stylesheets="@dashboard.css" visible="false">
@@ -410,6 +424,74 @@
                                                 </graphic>
                                             </Button>
                                         </children>
+                                    </HBox>
+                                </VBox>
+                            </children>
+                        </AnchorPane>
+                        <AnchorPane fx:id="monitor_pane" layoutX="-1.0" layoutY="55.0" prefHeight="639" prefWidth="820" stylesheets="@dashboard.css" visible="false">
+
+                            <children>
+                                <VBox alignment="TOP_LEFT" prefHeight="639" prefWidth="820" spacing="18">
+                                    <padding>
+                                        <Insets bottom="20" left="20" right="20" top="20" />
+                                    </padding>
+
+                                    <Label styleClass="label-bold" text="Monitor de Conexão / Impressão">
+                                        <font>
+                                            <Font size="18" />
+                                        </font>
+                                    </Label>
+
+                                    <VBox spacing="6">
+                                        <Label styleClass="label-bold" text="Log de conexão" />
+                                        <TextArea fx:id="txtLog" editable="false" prefRowCount="10" styleClass="log-area" wrapText="true" />
+                                    </VBox>
+
+                                    <GridPane hgap="10" vgap="10">
+                                        <columnConstraints>
+                                            <ColumnConstraints percentWidth="35" />
+                                            <ColumnConstraints percentWidth="65" />
+                                        </columnConstraints>
+
+                                        <Label text="Template:*" GridPane.rowIndex="0" />
+                                        <TextField fx:id="txtTemplate" promptText="HELLO.ncfm" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+
+                                        <Label text="Texto:*" GridPane.rowIndex="1" />
+                                        <TextField fx:id="txtTexto" promptText="Mensagem" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+                                        <Label text="Impressora:*" GridPane.rowIndex="2" />
+                                        <HBox spacing="6" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                            <children>
+                                                <ComboBox fx:id="cmbImpressora" prefWidth="220" />
+
+                                                <FontAwesomeIconView fx:id="icoStatus" glyphName="CIRCLE" size="16" style="-fx-fill: red;">
+                                                    <HBox.margin>
+                                                        <Insets top="4" />
+                                                    </HBox.margin>
+                                                </FontAwesomeIconView>
+                                            </children>
+                                        </HBox>
+                                        <rowConstraints>
+                                            <RowConstraints />
+                                            <RowConstraints />
+                                            <RowConstraints />
+                                        </rowConstraints>
+                                    </GridPane>
+
+                                    <!-- Salvar na flash -->
+                                    <CheckBox fx:id="chkSalvarFlash" text="Salvar template na memória da impressora" />
+
+                                    <Separator />
+
+                                    <HBox alignment="CENTER_RIGHT" spacing="10">
+                                        <ProgressBar fx:id="barStatus" prefWidth="360" visible="false" />
+
+                                        <Button fx:id="btnImprimir" disable="${controller.botaoDesabilitado}" 
+                                                onAction="#imprimir" prefWidth="110" styleClass="print" text="Imprimir">
+                                            <graphic>
+                                                <FontAwesomeIconView fill="WHITE" glyphName="PRINT" />
+                                            </graphic>
+                                        </Button>
                                     </HBox>
                                 </VBox>
                             </children>
