--- a/src/main/resources/br/com/automacaowebia/dashboard.fxml
+++ b/src/main/resources/br/com/automacaowebia/dashboard.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
@@ -471,10 +472,13 @@
                                                 </FontAwesomeIconView>
                                             </children>
                                         </HBox>
+                              <Label text="Quantidade:*" GridPane.rowIndex="3" />
+                              <Spinner fx:id="qtdSpinner" prefHeight="26.0" prefWidth="219.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                         <rowConstraints>
                                             <RowConstraints />
                                             <RowConstraints />
                                             <RowConstraints />
+                                 <RowConstraints minHeight="10.0" prefHeight="30.0" />
                                         </rowConstraints>
                                     </GridPane>
 
@@ -486,8 +490,7 @@
                                     <HBox alignment="CENTER_RIGHT" spacing="10">
                                         <ProgressBar fx:id="barStatus" prefWidth="360" visible="false" />
 
-                                        <Button fx:id="btnImprimir" disable="${controller.botaoDesabilitado}" 
-                                                onAction="#imprimir" prefWidth="110" styleClass="print" text="Imprimir">
+                                        <Button fx:id="btnImprimir" disable="${controller.botaoDesabilitado}" onAction="#imprimir" prefWidth="110" styleClass="print" text="Imprimir">
                                             <graphic>
                                                 <FontAwesomeIconView fill="WHITE" glyphName="PRINT" />
                                             </graphic>
