--- a/src/main/resources/br/com/automacaowebia/dashboard.fxml
+++ b/src/main/resources/br/com/automacaowebia/dashboard.fxml
@@ -474,10 +474,13 @@
                                         </HBox>
                               <Label text="Quantidade:*" GridPane.rowIndex="3" />
                               <Spinner fx:id="qtdSpinner" prefHeight="26.0" prefWidth="219.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <Label prefHeight="18.0" prefWidth="194.0" text="Tempo de espaçamento" GridPane.rowIndex="4" />
+                              <Spinner fx:id="tmpSpinner" prefHeight="26.0" prefWidth="219.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                                         <rowConstraints>
                                             <RowConstraints />
                                             <RowConstraints />
                                             <RowConstraints />
+                                 <RowConstraints minHeight="10.0" prefHeight="30.0" />
                                  <RowConstraints minHeight="10.0" prefHeight="30.0" />
                                         </rowConstraints>
                                     </GridPane>
