--- a/src/main/resources/br/com/automacaowebia/login-view.fxml
+++ b/src/main/resources/br/com/automacaowebia/login-view.fxml
@@ -2,6 +2,7 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -13,74 +14,75 @@
 <?import javafx.scene.text.Font?>
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="694.0" prefWidth="1080.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.automacaowebia.controller.LoginController">
-   <children>
-      <AnchorPane prefHeight="200.0" prefWidth="1080.0">
-         <children>
-            <AnchorPane fx:id="login_form" prefHeight="200.0" prefWidth="1080.0">
-               <children>
-                  <AnchorPane layoutX="274.0" prefHeight="694.0" prefWidth="805.0">
-                     <children>
-                        <TextField fx:id="username" layoutX="245.0" layoutY="356.0" onKeyTyped="#textfieldDesign" onMouseClicked="#textfieldDesign" onMouseDragged="#textfieldDesign" prefHeight="42.0" prefWidth="366.0" promptText="Usuário" styleClass="textfield-design" stylesheets="@login.css">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </TextField>
-                        <PasswordField fx:id="password" layoutX="245.0" layoutY="415.0" onKeyTyped="#textfieldDesign" onMouseClicked="#textfieldDesign" onMouseDragged="#textfieldDesign" prefHeight="42.0" prefWidth="366.0" promptText="Senha" styleClass="textfield-design" stylesheets="@login.css">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </PasswordField>
-                        <Label alignment="CENTER" layoutX="246.0" layoutY="284.0" prefHeight="44.0" prefWidth="366.0" text="Label Stream Viewer" textFill="#2188ff">
-                           <font>
-                              <Font name="System Bold" size="30.0" />
-                           </font>
-                        </Label>
-                        <Button fx:id="login_btn" layoutX="325.0" layoutY="484.0" mnemonicParsing="false" onAction="#login" prefHeight="50.0" prefWidth="206.0" styleClass="login-button" stylesheets="@login.css" text="Entrar" textFill="WHITE">
-                           <font>
-                              <Font size="20.0" />
-                           </font>
-                        </Button>
-                        <FontAwesomeIconView fill="#3458cc" glyphName="USERS" layoutX="372.0" layoutY="234.0" selectionFill="#2f466b" size="98" text="" wrappingWidth="112.22855949401855" />
-                        <Button alignment="CENTER" contentDisplay="RIGHT" layoutX="741.0" layoutY="14.0" mnemonicParsing="false" onAction="#onExit" onMouseClicked="#onExit" onMouseDragged="#onExit" prefHeight="29.0" prefWidth="50.0" styleClass="close" stylesheets="@login.css">
-                           <graphic>
-                              <FontAwesomeIconView fill="WHITE" glyphName="CLOSE" size="16.0" />
-                           </graphic>
-                        </Button>
-                     </children>
-                  </AnchorPane>
-                  <AnchorPane prefHeight="694.0" prefWidth="275.0" styleClass="login-bg" stylesheets="@login.css">
-                     <children>
-                        <Label fx:id="f_logo" alignment="CENTER" contentDisplay="CENTER" layoutX="18.0" layoutY="283.0" prefHeight="127.0" prefWidth="238.0" text="L S V">
-                           <font>
-                              <Font size="80.0" />
-                           </font>
-                           <textFill>
-                              <LinearGradient endX="0.7662834737492704" endY="0.6130268053076733" startY="1.0">
-                                 <stops>
-                                    <Stop>
-                                       <color>
-                                          <Color red="1.0" green="0.30980393290519714" blue="0.7607843279838562" />
-                                       </color>
-                                    </Stop>
-                                    <Stop offset="1.0">
-                                       <color>
-                                          <Color red="0.3100000023841858" green="0.536689817905426" blue="1.0" />
-                                       </color>
-                                    </Stop>
-                                 </stops>
-                              </LinearGradient>
-                           </textFill>
-                        </Label>
-                        <Label fx:id="lblVersao" alignment="CENTER" layoutX="2.0" layoutY="667.0" prefHeight="18.0" prefWidth="264.0" text="Versão 1.0.0" textAlignment="CENTER" textFill="WHITE">
-                           <font>
-                              <Font size="10.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </AnchorPane>
-               </children>
-            </AnchorPane>
-         </children>
-      </AnchorPane>
-   </children>
+    <children>
+        <AnchorPane prefHeight="200.0" prefWidth="1080.0">
+            <children>
+                <AnchorPane fx:id="login_form" prefHeight="200.0" prefWidth="1080.0">
+                    <children>
+                        <AnchorPane layoutX="274.0" prefHeight="694.0" prefWidth="805.0">
+                            <children>
+                                <TextField fx:id="username" layoutX="245.0" layoutY="356.0" onKeyTyped="#textfieldDesign" onMouseClicked="#textfieldDesign" onMouseDragged="#textfieldDesign" prefHeight="42.0" prefWidth="366.0" promptText="Usuário" styleClass="textfield-design" stylesheets="@login.css">
+                                    <font>
+                                        <Font size="18.0" />
+                                    </font>
+                                </TextField>
+                                <PasswordField fx:id="password" layoutX="245.0" layoutY="415.0" onKeyTyped="#textfieldDesign" onMouseClicked="#textfieldDesign" onMouseDragged="#textfieldDesign" prefHeight="42.0" prefWidth="366.0" promptText="Senha" styleClass="textfield-design" stylesheets="@login.css">
+                                    <font>
+                                        <Font size="18.0" />
+                                    </font>
+                                </PasswordField>
+                                <Label alignment="CENTER" layoutX="246.0" layoutY="284.0" prefHeight="44.0" prefWidth="366.0" text="Label Stream Viewer" textFill="#2188ff">
+                                    <font>
+                                        <Font name="System Bold" size="30.0" />
+                                    </font>
+                                </Label>
+                                <CheckBox fx:id="chkRemember" layoutX="245.0" layoutY="471.0" text="Lembrar usuário e senha" textFill="#444" />
+                                <Button fx:id="login_btn" layoutX="326.0" layoutY="502.0" mnemonicParsing="false" onAction="#login" prefHeight="50.0" prefWidth="206.0" styleClass="login-button" stylesheets="@login.css" text="Entrar" textFill="WHITE">
+                                    <font>
+                                        <Font size="20.0" />
+                                    </font>
+                                </Button>
+                                <FontAwesomeIconView fill="#3458cc" glyphName="BARCODE" layoutX="372.0" layoutY="234.0" selectionFill="#2f466b" size="98" text="" wrappingWidth="112.22855949401855" />
+                                <Button alignment="CENTER" contentDisplay="RIGHT" layoutX="741.0" layoutY="14.0" mnemonicParsing="false" onAction="#onExit" onMouseClicked="#onExit" onMouseDragged="#onExit" prefHeight="29.0" prefWidth="50.0" styleClass="close" stylesheets="@login.css">
+                                    <graphic>
+                                        <FontAwesomeIconView fill="WHITE" glyphName="CLOSE" size="16.0" />
+                                    </graphic>
+                                </Button>
+                            </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="694.0" prefWidth="275.0" styleClass="login-bg" stylesheets="@login.css">
+                            <children>
+                                <Label fx:id="f_logo" alignment="CENTER" contentDisplay="CENTER" layoutX="18.0" layoutY="283.0" prefHeight="127.0" prefWidth="238.0" text="L S V">
+                                    <font>
+                                        <Font size="80.0" />
+                                    </font>
+                                    <textFill>
+                                        <LinearGradient endX="0.7662834737492704" endY="0.6130268053076733" startY="1.0">
+                                            <stops>
+                                                <Stop>
+                                                    <color>
+                                                        <Color red="1.0" green="0.30980393290519714" blue="0.7607843279838562" />
+                                                    </color>
+                                                </Stop>
+                                                <Stop offset="1.0">
+                                                    <color>
+                                                        <Color red="0.3100000023841858" green="0.536689817905426" blue="1.0" />
+                                                    </color>
+                                                </Stop>
+                                            </stops>
+                                        </LinearGradient>
+                                    </textFill>
+                                </Label>
+                                <Label fx:id="lblVersao" alignment="CENTER" layoutX="2.0" layoutY="667.0" prefHeight="18.0" prefWidth="264.0" text="Versão 1.0.0" textAlignment="CENTER" textFill="WHITE">
+                                    <font>
+                                        <Font size="10.0" />
+                                    </font>
+                                </Label>
+                            </children>
+                        </AnchorPane>
+                    </children>
+                </AnchorPane>
+            </children>
+        </AnchorPane>
+    </children>
 </StackPane>
